--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node main.ts"
+    "start": "ts-node server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/serve-index": "^1.7.29",
+    "express": "^4.16.4",
+    "serve-index": "^1.9.1",
     "typescript": "^3.4.3"
   },
   "devDependencies": {
