--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.ts"
+    "start": "nodemon --exec ts-node server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "nodemon": "^1.18.11",
     "serve-index": "^1.9.1",
     "typescript": "^3.4.3"
   },
